[workspace]

members = [
    "api",
    "c14n",
    "inmem",
    "iri",
    "isomorphism",
    "jsonld",
    "resource",
    "rio",
    "sophia",
    "term",
    "turtle",
    "xml",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
authors = ["Pierre-Antoine Champin <pierre-antoine@champin.net>"]
edition = "2021"
repository = "https://github.com/pchampin/sophia_rs"
readme = "./README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web", "w3c"] # no more than 5


[workspace.dependencies]
sophia_api = { version = "0.8.0", path = "./api" }
sophia_c14n = { version = "0.8.0", path = "./c14n" }
sophia_inmem = { version = "0.8.0", path = "./inmem" }
sophia_iri = { version = "0.8.0", path = "./iri" }
sophia_isomorphism = { version = "0.8.0", path = "./isomorphism" }
sophia_jsonld = { version = "0.8.0", path = "./jsonld" }
sophia_resource = { version = "0.8.0", path = "./resource" }
sophia_rio = { version = "0.8.0", path = "./rio" }
sophia_term = { version = "0.8.0", path = "./term" }
sophia_turtle = { version = "0.8.0", path = "./turtle" }
sophia_xml = { version = "0.8.0", path = "./xml" }

criterion = "0.5"
futures-util = "0.3.28"
lazy_static = "1.4.0"
mownstr = "0.2.1"
oxiri = "0.2.3-alpha.1"
regex = "1.6.0"
resiter = "0.5.0"
rio_api = { version = "0.8", git="https://github.com/oxigraph/rio", branch = "upgrade-oxigraph-deps", features = ["generalized"] }
rio_turtle = { version = "0.8", git="https://github.com/oxigraph/rio", branch = "upgrade-oxigraph-deps", features = ["generalized"] }
rio_xml = { version = "0.8", git="https://github.com/oxigraph/rio", branch = "upgrade-oxigraph-deps"  }
test-case = "3.1.0"
thiserror = "1.0.32"
tokio = { version="1.33.0", features = ["rt", "sync"] }
url = "2.4.1"

[profile.release]
lto = true
