[workspace]

members = [
    "api",
    "c14n",
    "inmem",
    "iri",
    "isomorphism",
    "jsonld",
    "resource",
    "rio",
    "sophia",
    "sparql",
    "sparql_client",
    "term",
    "turtle",
    "xml",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
authors = ["Pierre-Antoine Champin <pierre-antoine@champin.net>"]
edition = "2021"
repository = "https://github.com/pchampin/sophia_rs"
readme = "./README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web", "w3c"] # no more than 5


[workspace.dependencies]
sophia_api = { version = "0.9.0", path = "./api" }
sophia_c14n = { version = "0.9.0", path = "./c14n" }
sophia_inmem = { version = "0.9.0", path = "./inmem" }
sophia_iri = { version = "0.9.0", path = "./iri" }
sophia_isomorphism = { version = "0.9.0", path = "./isomorphism" }
sophia_jsonld = { version = "0.9.0", path = "./jsonld" }
sophia_resource = { version = "0.9.0", path = "./resource" }
sophia_sparql = { version = "0.9.0", path = "./sparql" }
sophia_sparql_client = { version = "0.9.0", path = "./sparql_client" }
sophia_rio = { version = "0.9.0", path = "./rio" }
sophia_term = { version = "0.9.0", path = "./term" }
sophia_turtle = { version = "0.9.0", path = "./turtle" }
sophia_xml = { version = "0.9.0", path = "./xml" }

criterion = "0.5"
env_logger = "0.11"
futures-util = "0.3"
lazy_static = "1.5"
log = "0.4"
mownstr = "0.3"
oxiri = "0.2"
regex = "1.11"
resiter = "0.5"
rio_api = { version = "0.8", features = ["generalized"] }
rio_turtle = { version = "0.8", features = ["generalized"] }
rio_xml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
test-case = "3.3"
thiserror = "2.0"
tokio = { version="1.41", features = ["rt", "sync"] }
toml = "0.8"
url = "2.5"

[profile.release]
lto = true

[workspace.lints.clippy]
enum_glob_use = "allow"

