[workspace]

members = [
    "api",
    "bcp47",
    "c14n",
    "inmem",
    "iri",
    "isomorphism",
    "jsonld",
    "reasoner",
    "resource",
    "sophia",
    "sparql",
    "sparql_client",
    "term",
    "turtle",
    "xml",
]
resolver = "2"

[workspace.package]
version = "0.10.0"
authors = ["Pierre-Antoine Champin <pierre-antoine@champin.net>"]
edition = "2024"
repository = "https://github.com/pchampin/sophia_rs"
readme = "./README.md"
license = "Apache-2.0 / CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web", "w3c"] # no more than 5


[workspace.dependencies]
sophia_api = { version = "0.10.0", path = "./api" }
sophia_bcp47 = { version = "0.10.0", path = "./bcp47" }
sophia_c14n = { version = "0.10.0", path = "./c14n" }
sophia_inmem = { version = "0.10.0", path = "./inmem" }
sophia_iri = { version = "0.10.0", path = "./iri" }
sophia_isomorphism = { version = "0.10.0", path = "./isomorphism" }
sophia_jsonld = { version = "0.10.0", path = "./jsonld" }
sophia_reasoner = { version = "0.10.0", path = "./reasoner" }
sophia_resource = { version = "0.10.0", path = "./resource" }
sophia_sparql = { version = "0.10.0", path = "./sparql" }
sophia_sparql_client = { version = "0.10.0", path = "./sparql_client" }
sophia_term = { version = "0.10.0", path = "./term" }
sophia_turtle = { version = "0.10.0", path = "./turtle" }
sophia_xml = { version = "0.10.0", path = "./xml" }

criterion = "0.5"
env_logger = "0.11"
futures-util = "0.3"
lazy_static = "1"
log = "0.4"
mownstr = "0.3"
oxiri = "0.2"
oxrdf = { version = "0.3", features = ["rdf-12"] }
regex = "1"
resiter = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
test-case = "3"
thiserror = "2"
tokio = { version="1", features = ["rt", "sync"] }
url = "2"
uuid = "1"

[profile.release]
lto = true

[workspace.lints.clippy]
enum_glob_use = "allow"

