[package]
name = "sophia_api"
version = "0.7.0"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2018"
description = "A Rust toolkit for RDF and Linked Data - Core API"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_api"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# This feature enables to use the graph and dataset test macros in other crates
test_macro = []

[dependencies]
sophia_iri = { version = "0.7.0", path = "../iri" }
lazy_static = "1.4.0"
mownstr = "0.1.1"
regex = "1.4.5"
resiter = "0.4.0"
thiserror = "1.0.20"

[dev-dependencies]
sophia_iri = { version = "0.7.0", path = "../iri", features = ["test_data"] }
sophia_term = { version = "0.7.0", path = "../term" }
test-case = "1.0.0"
