[package]
name = "sophia_api"
version = "0.8.0-alpha"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2021"
description = "A Rust toolkit for RDF and Linked Data - Core API"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_api"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# This feature increases the number of tests
all_tests = []
# This feature enables to use the graph and dataset test macros in other crates
test_macro = []

[dependencies]
sophia_iri = { version = "0.8.0-alpha", path = "../iri" }
lazy_static = "1.4.0"
mownstr = { git="https://github.com/pchampin/mownstr", rev="c88467d" }
regex = "1.6.0"
resiter = "0.4.0"
thiserror = "1.0.32"

[dev-dependencies]
sophia_iri = { version = "0.8.0-alpha", path = "../iri", features = ["test_data"] }
test-case = "2.2.1"
