[package]
name = "sophia_api"
description = "A Rust toolkit for RDF and Linked Data - Core API"
documentation = "https://docs.rs/sophia_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
# This feature increases the number of tests
all_tests = []
# This feature enables to use the graph and dataset test macros in other crates
test_macro = []
# This feature (enabled by default) makes prefixes seralizable/deserializable
serde = ["dep:serde"]


[dependencies]
sophia_iri.workspace = true
lazy_static.workspace = true
mownstr.workspace = true
regex.workspace = true
resiter.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
sophia_iri = { workspace = true, features = ["test_data"] }
test-case.workspace = true
toml = "0.8.0"
