[package]
name = "sophia_bcp47"
description = "A Rust toolkit for RDF and Linked Data - BCP47 language tag management"
documentation = "https://docs.rs/sophia_iri"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mownstr.workspace = true
regex.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
test-case.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]
