[package]
name = "sophia_c14n"
description = "A Rust toolkit for RDF and Linked Data - Graph and Dataset canonicalization"
documentation = "https://docs.rs/sophia_c14n"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["rdf", "linked-data", "semantic-web", "w3c"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha256 = "1.1.6"
sophia_api.workspace = true
sophia_iri.workspace = true
thiserror.workspace = true