[package]
name = "sophia_indexed"
version = "0.7.0"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2018"
description = "A Rust toolkit for RDF and Linked Data - Utility traits and functions for index-based implementations of graphs and datasets"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_indexed"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = { version = "0.7.0", path = "../api" }
sophia_term = { version = "0.7.0", path = "../term" }

[dev-dependencies]
