[package]
name = "sophia_inmem"
version = "0.8.0-alpha"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2021"
description = "A Rust toolkit for RDF and Linked Data - In-memory Graph and Dataset implementations"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_inmem"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This feature increases the number of tests
all_tests = []

[dependencies]
sophia_api = { version = "0.8.0-alpha", path = "../api" }

[dev-dependencies]
sophia_api = { version = "0.8.0-alpha", path = "../api", features = ["test_macro"] }
