[package]
name = "sophia_inmem"
description = "A Rust toolkit for RDF and Linked Data - In-memory Graph and Dataset implementations"
documentation = "https://docs.rs/sophia_inmem"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This feature increases the number of tests
all_tests = []

[dependencies]
sophia_api.workspace = true

[dev-dependencies]
sophia_api = { workspace = true, features = ["test_macro"] }
