[package]
name = "sophia_iri"
version = "0.8.0-alpha"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2021"
description = "A Rust toolkit for RDF and Linked Data - IRI management"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_iri"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
oxiri = { git="https://github.com/oxigraph/oxiri", rev="3191bed" }
regex = "1.6.0"
thiserror = "1.0.32"

[dev-dependencies]
criterion = "0.3.6"

[features]
default = []
test_data = []
examples = []

[[bench]]
name = "bench1"
harness = false
