[package]
name = "sophia_iri"
description = "A Rust toolkit for RDF and Linked Data - IRI management"
documentation = "https://docs.rs/sophia_iri"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["rdf", "linked-data", "semantic-web", "w3c"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static.workspace = true
oxiri.workspace = true
regex.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []
test_data = []
examples = []

[[bench]]
name = "bench1"
harness = false
