[package]
name = "sophia_iri"
description = "A Rust toolkit for RDF and Linked Data - IRI management"
documentation = "https://docs.rs/sophia_iri"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxiri.workspace = true
regex.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
test-case.workspace = true
toml.workspace = true

[features]
default = ["serde"]
test_data = []
examples = []
serde = ["dep:serde"]

[[bench]]
name = "bench1"
harness = false
