[package]
name = "sophia_isomorphism"
description = "A Rust toolkit for RDF and Linked Data - Graph and Dataset isomorphism"
documentation = "https://docs.rs/sophia_isomorphism"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api.workspace = true
sophia_iri.workspace = true
