[package]
name = "sophia_jsonld"
description = "A Rust toolkit for RDF and Linked Data - JSON-LD parser and serializer"
documentation = "https://docs.rs/sophia_jsonld"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# This feature enables retrieval of context via file: URLs
file_url = ["dep:url"]
# This feature enables retrieval of context over HTTP(S)
http_client = ["json-ld/reqwest"]

[dependencies]
futures-util.workspace = true
iref = "2.2"
json-ld = "0.15.0"
json-syntax = "0.9"
langtag = "0.3.4"
locspan = "0.7.12"
rdf-types = "0.15.4"
sophia_api.workspace = true
sophia_iri.workspace = true
sophia_term.workspace = true
thiserror.workspace = true
tokio.workspace = true
url = { workspace = true, optional = true }

[dev-dependencies]
sophia_turtle.workspace = true
