[package]
name = "sophia_jsonld"
description = "A Rust toolkit for RDF and Linked Data - JSON-LD parser and serializer"
documentation = "https://docs.rs/sophia_jsonld"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = []
# This feature enables retrieval of context via file: URLs
file_url = ["dep:url"]
# This feature enables retrieval of context over HTTP(S)
http_client = ["json-ld/reqwest"]

[dependencies]
iref = "^3.1.2"
json-ld = "^0.21"
json-syntax = "^0.12"
rdf-types = "^0.22"
sophia_api.workspace = true
sophia_iri.workspace = true
sophia_term.workspace = true
thiserror.workspace = true
tokio.workspace = true
url = { workspace = true, optional = true }

[dev-dependencies]
sophia_turtle.workspace = true
