[package]
name = "sophia_reasoner"
description = "A Rust toolkit for RDF and Linked Data - reasoner over Simple, RDF and RDF-Schema entailments"
documentation = "https://docs.rs/sophia_reasoner"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.11.0"
regex.workspace = true
smallvec = { version = "1.15.1", features = ["const_generics"] }
sophia_api.workspace = true
sophia_iri.workspace = true
sophia_sparql.workspace = true
thiserror.workspace = true

[dev-dependencies]
sophia_api = { workspace = true, features = ["test_macro"] }
sophia_isomorphism.workspace = true
sophia_turtle.workspace = true
test-case = "3.3"
