[package]
name = "sophia_resource"
description = "A Rust toolkit for RDF and Linked Data - Resource-centric API"
documentation = "https://docs.rs/sophia_resource"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This feature enables the JSON-LD parser and serializer
jsonld = ["sophia_jsonld", "futures-util"]
# This feature enables the RDF/XML parser and serializer
xml = ["sophia_xml"]
# This feature enables the HTTP client in dependencies
http_client = []


[dependencies]
futures-util = { workspace = true, optional = true }
sophia_api.workspace = true
sophia_iri.workspace = true
sophia_jsonld = { workspace = true, optional = true }
sophia_turtle.workspace = true
sophia_xml = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
