[package]
name = "sophia_rio"
version = "0.8.0-alpha"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2021"
description = "A Rust toolkit for RDF and Linked Data - Common code for Rio adapters"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_rio"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = { version = "0.8.0-alpha", path = "../api" }
sophia_iri = { version = "0.8.0-alpha", path = "../iri" }
rio_api = { version = "0.8", features = ["generalized"] }

[dev-dependencies]
