[package]
name = "sophia_rio"
description = "A Rust toolkit for RDF and Linked Data - Common code for Rio adapters"
documentation = "https://docs.rs/sophia_rio"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["rdf", "linked-data", "semantic-web", "w3c"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api.workspace = true
sophia_iri.workspace = true
rio_api.workspace = true

[dev-dependencies]
