[package]
name = "sophia"
description = "A Rust toolkit for RDF and Linked Data"
documentation = "https://docs.rs/sophia"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["rdf", "linked-data", "semantic-web", "w3c"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
# This feature enables the RDF/XML parser and serializer
xml = ["sophia_xml"]
# This feature enables to use the graph and dataset test macros in other crates
test_macro = ["sophia_api/test_macro"]

[dependencies]
sophia_iri.workspace = true
sophia_api.workspace = true
sophia_inmem.workspace = true
sophia_c14n.workspace = true
sophia_isomorphism.workspace = true
sophia_rio.workspace = true
sophia_turtle.workspace = true
sophia_xml = { workspace = true, optional = true }
