[package]
name = "sophia"
description = "A Rust toolkit for RDF and Linked Data"
documentation = "https://docs.rs/sophia"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
# This feature enables the JSON-LD parser and serializer
jsonld = ["sophia_jsonld"]
# This feature enables the RDF/XML parser and serializer
xml = ["sophia_xml"]
# This feature enables to use the graph and dataset test macros in other crates
test_macro = ["sophia_api/test_macro"]
# This feature enables the use of the surf crate in dependencies
surf = ["sophia_jsonld/surf_loader"]

[dependencies]
sophia_iri.workspace = true
sophia_api.workspace = true
sophia_inmem.workspace = true
sophia_c14n.workspace = true
sophia_isomorphism.workspace = true
sophia_jsonld = { workspace = true, optional = true }
sophia_resource.workspace = true
sophia_rio.workspace = true
sophia_turtle.workspace = true
sophia_term.workspace = true
sophia_xml = { workspace = true, optional = true }
