[package]
name = "sophia"
description = "A Rust toolkit for RDF and Linked Data"
documentation = "https://docs.rs/sophia"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
# This feature enables the JSON-LD parser and serializer
jsonld = ["dep:sophia_jsonld", "sophia_resource/jsonld"]
# This feature enables the RDF/XML parser and serializer
xml = ["dep:sophia_xml", "sophia_resource/xml"]
# This feature enables to use the graph and dataset test macros in other crates
test_macro = ["sophia_api/test_macro"]
# This feature enables the file: URL support in dependencies
file_url = ["sophia_jsonld/file_url", "sophia_resource/file_url"]
# This feature enables the HTTP client in dependencies
http_client = ["sophia_jsonld/http_client", "sophia_resource/http_client"]

[dependencies]
sophia_iri.workspace = true
sophia_api.workspace = true
sophia_inmem.workspace = true
sophia_c14n.workspace = true
sophia_isomorphism.workspace = true
sophia_jsonld = { workspace = true, optional = true }
sophia_resource.workspace = true
sophia_rio.workspace = true
sophia_turtle.workspace = true
sophia_term.workspace = true
sophia_xml = { workspace = true, optional = true }

[dev-dependencies]
url.workspace = true
# dependencies for the jsonld-context example
json-ld = "0.15.1"
locspan = "0.7"

[[example]]
name = "jsonld-context"
required-features = ["jsonld"]
