[package]
name = "sophia_sparql"
description = "A Rust toolkit for RDF and Linked Data - SPARQL query language"
documentation = "https://docs.rs/sophia_sparql"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api.workspace = true
sophia_inmem.workspace = true
sophia_iri.workspace = true
sophia_term.workspace = true
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["alloc"] }
log.workspace = true
num-bigint = "0.4"
oxiri.workspace = true
oxrdf = { version = "0.3.0-beta", features = ["rdf-12"] }
rand = "0.8"
regex.workspace = true
spargebra = { version = "0.4.0-beta.2", features = ["sparql-12"] }
thiserror.workspace = true
uuid = { version = "1.11", features = ["v4", "v7"] }
md5 = "0.7.0"
sha1 = "0.10.6"
sha2.workspace = true

[dev-dependencies]
sophia_turtle.workspace = true
test-case = "3.3"
