[package]
name = "sophia_term"
version = "0.6.0"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2018"
description = "A Rust toolkit for RDF and Linked Data - Implementations of RDF terms"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_term"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = { version = "0.6.0", path = "../api" }
sophia_iri = { version = "0.6.0", path = "../iri" }
oxilangtag = "0.1.1"
lazy_static = "1.4.0"
mownstr = "0.1.1"
regex = "1.3.9"
weak-table = "0.3.0"
thiserror = "1.0.20"

[dev-dependencies]
test-case = "1.0.0"
sophia_iri = { version = "0.6.0", path = "../iri", features = ["test_data"] }
