[package]
name = "sophia_term"
version = "0.7.1"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2021"
description = "A Rust toolkit for RDF and Linked Data - Implementations of RDF terms"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_term"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = { version = "0.7.1", path = "../api" }
sophia_iri = { version = "0.7.1", path = "../iri" }
oxilangtag = "0.1.2"
lazy_static = "1.4.0"
mownstr = "0.1.3"
regex = "1.5.4"
weak-table = "0.3.2"
thiserror = "1.0.30"

[dev-dependencies]
test-case = "1.2.1"
sophia_iri = { version = "0.7.1", path = "../iri", features = ["test_data"] }
