[package]
name = "sophia_turtle"
description = "A Rust toolkit for RDF and Linked Data - parsers and serializers for the Turtle-family of syntaxes"
documentation = "https://docs.rs/sophia_turtle"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["rdf", "linked-data", "semantic-web", "w3c", "turtle", "trig", "n-triples", "n-quads", "parser", "serializer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static.workspace = true
oxiri.workspace = true
regex.workspace = true
rio_turtle.workspace = true
sophia_api.workspace = true
sophia_iri.workspace = true
sophia_rio.workspace = true

[dev-dependencies]
sophia_isomorphism.workspace = true

