[package]
name = "sophia_xml"
version = "0.7.1"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2021"
description = "A Rust toolkit for RDF and Linked Data - RDF/XML parser and serializer"
repository = "https://github.com/pchampin/sophia_rs"
documentation = "https://docs.rs/sophia_xml"
readme = "../README.md"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxiri = "0.1.1"
rio_xml = "0.6.1"
sophia_api = { version = "0.7.1", path = "../api" }
sophia_rio = { version = "0.7.1", path = "../rio" }

[dev-dependencies]
sophia_inmem = { version = "0.7.1", path = "../inmem" }
sophia_term = { version = "0.7.1", path = "../term" }
