[package]
name = "sophia_xml"
description = "A Rust toolkit for RDF and Linked Data - RDF/XML parser and serializer"
documentation = "https://docs.rs/sophia_xml"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["rdf", "linked-data", "semantic-web", "w3c"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxiri.workspace = true
rio_xml.workspace = true
sophia_api.workspace = true
sophia_iri.workspace = true
sophia_rio.workspace = true

[dev-dependencies]
sophia_isomorphism.workspace = true
